<resources>
    <string name="app_name">OnliShop</string>
    <string name="text_add_item">Add item</string>
    <string name="text_not_available_items">No items available</string>
    <string name="text_sizes">Sizes:</string>
    <string name="text_descr">Description</string>
    <string name="text_search">Search</string>
    <string name="text_full_name">Full name</string>
    <string name="text_phone">Phone</string>
    <string name="text_address_del">Delivery address</string>
    <string name="text_email">Email address</string>
    <string name="text_payment">Payment</string>
    <string name="text_cash">Cash</string>
    <string name="text_card_data">Card data</string>
    <string name="text_user_data">User data</string>
    <string name="text_user_orders">User orders</string>
    <string name="text_card">Card</string>
    <string name="text_pass">Password</string>
    <string name="text_pass_confirm">Password confirm</string>
    <string name="hint_card_num">XXXX XXXX XXXX XXXX</string>
    <string name="hint_card_date">XX/XX</string>
    <string name="hint_card_cvc">XXX</string>
    <string name="hint_search_item">e.g. Hoodie</string>
    <string name="hint_name">e.g. Vasyl Mykolayovich</string>
    <string name="hint_phone">e.g. 067 123 12 12</string>
    <string name="hint_email">e.g. something@mail.com</string>
    <string name="hint_pass">e.g. 123456Q</string>
    <string name="hint_pass_info">Password should have at least 7 symbols, including numbers and uppercase letter</string>
    <string name="hint_delivery">e.g. Kyiv, NP number 228</string>
    <string name="empty_items">No items found</string>
    <string name="empty_orders">Zero orders yet</string>
    <string name="text_items_title">Items</string>
    <string name="text_groups_title">Groups</string>
    <string name="text_bag">Bag</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_confirm_compound">Confirm - %1$s</string>
    <string name="text_register">Register</string>
    <string name="text_details">Details</string>
    <string name="text_confirmed">Thank you for order\n we will call you back for confirmation</string>
    <string name="error_order_info">Please enter valid information</string>
    <string name="text_info">Info</string>
    <string name="text_account">Account</string>
    <string name="text_user_name">Name: %1$s</string>
    <string name="text_user_phone">Phone: %1$s</string>
    <string name="text_order_id">Order: %1$s</string>
    <string name="text_user_email">Email: %1$s</string>
    <string name="text_order_card">Card: %1$s</string>
    <string name="text_order_cash">Payment: By cash</string>
    <string name="text_order_date">Date: %1$s</string>
    <string name="text_order_count">Count: %1$d</string>
    <string name="text_order_delivery">Delivery: %1$s</string>
    <string name="text_order_price">Final price: %1$s</string>
    <string name="text_price">Price: %1$s</string>
    <string name="text_make_order">Make order for %1$s</string>
    <string name="text_privacy">Privacy policy (Hold to open privacy policy)</string>
</resources>