<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:foreground="@drawable/ripple_rect"
    app:cardBackgroundColor="@color/color_main_black"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FontedText"
            android:text="@string/text_order_id"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_order_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/FontedText"
            android:text="@string/text_user_name"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_order_id"
            />

        <TextView
            android:id="@+id/tv_order_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/FontedText"
            android:text="@string/text_user_phone"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_order_name"
            />

        <TextView
            android:id="@+id/tv_order_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/FontedText"
            android:text="@string/text_user_email"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_order_phone"
            />

        <TextView
            android:id="@+id/tv_order_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/FontedText"
            android:text="@string/text_order_delivery"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_order_email"
            />

        <TextView
            android:id="@+id/tv_order_card_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/FontedText"
            android:text="@string/text_order_card"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_order_delivery"
            />

        <TextView
            android:id="@+id/tv_order_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/FontedText"
            android:text="@string/text_order_date"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_order_card_num"
            />


        <TextView
            android:id="@+id/tv_order_items_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/FontedText"
            android:text="@string/text_items_title"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_order_date"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rec_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:listitem="@layout/item_item_order"
            tools:itemCount="3"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tv_order_items_title"
            />

        <TextView
            android:id="@+id/tv_order_full_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/FontedText"
            android:text="@string/text_order_price"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:lineSpacingExtra="10dp"
            app:layout_constraintTop_toBottomOf="@id/rec_items"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>