<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightMain"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            app:srcCompat="@drawable/ic_back"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            style="@style/AutoResizeText"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/text_details"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        layout="@layout/divider_title"
        android:id="@+id/divider_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/bg_edit"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:hint="@string/hint_name"
        android:textColor="@color/black"
        style="@style/FontedText"
        app:layout_constraintTop_toBottomOf="@id/divider_name"
        />

    <include
        layout="@layout/divider_title"
        android:id="@+id/divider_phone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/bg_edit"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:hint="@string/hint_phone"
        android:textColor="@color/black"
        style="@style/FontedText"
        app:layout_constraintTop_toBottomOf="@id/divider_phone"
        />

    <include
        layout="@layout/divider_title"
        android:id="@+id/divider_delivery"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/edit_phone"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="120dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:background="@drawable/bg_edit"
        android:imeOptions="actionDone"
        android:inputType="textCapSentences"
        android:hint="@string/hint_delivery"
        android:textColor="@color/black"
        android:gravity="start"
        style="@style/FontedText"
        app:layout_constraintTop_toBottomOf="@id/divider_delivery"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/splash_grad_turned"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:theme="@style/FontedText"
        android:text="@string/text_confirm"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/result_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightMain"
        android:visibility="gone"
        >

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:indeterminateTint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_confirmed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:text="@string/text_confirmed"
            android:gravity="center"
            style="@style/FontedText"
            android:lineSpacingExtra="10dp"
            android:visibility="gone"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@id/btn_confirm_full"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_full"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/splash_grad_turned"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:theme="@style/FontedText"
            android:text="@string/text_confirm"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>