<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightMain">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:foreground="@drawable/ripple"
            app:srcCompat="@drawable/ic_back"
            android:rotation="270"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_top_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            style="@style/AutoResizeText"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/text_account"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_phone"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_phone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:foreground="@drawable/ripple"
            app:srcCompat="@drawable/ic_phone"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_info"
            />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_info"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:foreground="@drawable/ripple"
            app:srcCompat="@drawable/ic_info"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/user_reg_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="60dp"
                >

                <include
                    layout="@layout/divider_title"
                    android:id="@+id/divider_name"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/bg_edit"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_name"
                    android:textColor="@color/black"
                    style="@style/FontedText"
                    app:layout_constraintTop_toBottomOf="@id/divider_name"
                    />

                <include
                    layout="@layout/divider_title"
                    android:id="@+id/divider_phone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_name"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/bg_edit"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_phone"
                    android:maxLength="13"
                    android:textColor="@color/black"
                    style="@style/FontedText"
                    app:layout_constraintTop_toBottomOf="@id/divider_phone"
                    />

                <include
                    layout="@layout/divider_title"
                    android:id="@+id/divider_email"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_phone"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/bg_edit"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_email"
                    android:textColor="@color/black"
                    style="@style/FontedText"
                    app:layout_constraintTop_toBottomOf="@id/divider_email"
                    />

                <include
                    layout="@layout/divider_title"
                    android:id="@+id/divider_pass"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_email"
                    />

                <TextView
                    android:id="@+id/tv_password_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    style="@style/FontedText"
                    android:text="@string/hint_pass_info"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:lineSpacingExtra="6dp"
                    app:layout_constraintTop_toBottomOf="@id/divider_pass"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_pass"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/bg_edit"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_pass"
                    android:textColor="@color/black"
                    style="@style/FontedText"
                    app:layout_constraintTop_toBottomOf="@id/tv_password_hint"
                    />

                <include
                    layout="@layout/divider_title"
                    android:id="@+id/divider_pass_confirm"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/edit_pass"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_pass_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:background="@drawable/bg_edit"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_pass"
                    android:textColor="@color/black"
                    style="@style/FontedText"
                    app:layout_constraintTop_toBottomOf="@id/divider_pass_confirm"
                    />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/check_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    style="@style/FontedText"
                    android:text="@string/text_privacy"
                    android:textColor="@color/black"
                    android:buttonTint="@color/black"
                    app:layout_constraintTop_toBottomOf="@id/edit_pass_confirm"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/splash_grad_turned"
            android:foreground="@drawable/ripple_rect"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:theme="@style/FontedText"
            android:text="@string/text_register"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container_user_orders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp"
            >

            <include
                layout="@layout/divider_title"
                android:id="@+id/divider_user_data"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_user_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/main"
                app:cardElevation="0dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/divider_user_data"
                >

                <TextView
                    android:id="@+id/btn_user_login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:foreground="@drawable/ripple_rect"
                    style="@style/FontedText"
                    android:text="@string/text_register"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/container_user_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    >

                    <TextView
                        android:id="@+id/tv_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/FontedText"
                        android:text="@string/text_user_name"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        />

                    <TextView
                        android:id="@+id/tv_user_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        style="@style/FontedText"
                        android:text="@string/text_user_phone"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
                        />

                    <TextView
                        android:id="@+id/tv_user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        style="@style/FontedText"
                        android:text="@string/text_user_email"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/tv_user_phone"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <include
                layout="@layout/divider_title"
                android:id="@+id/divider_user_orders"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintTop_toBottomOf="@id/card_user_data"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:listitem="@layout/item_order"
                android:clipToPadding="false"
                android:paddingBottom="20dp"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/divider_user_orders"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/tv_empty_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/empty_orders"
                app:layout_constraintTop_toBottomOf="@id/divider_user_orders"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>